# auto_trade

./: Cargo.toml
src/: config.rs  domain.rs  dto.rs  lib.rs  main.rs  market_data_manager.rs  signal_processor.rs  ta.rs  trading_bot.rs  trading_strategy.rs  websocket_handler.rs
src/adapter/: coordinator.rs
src/analysis/: indicatiors.rs  mod.rs  patterns.rs
src/application/: mod.rs
src/application/dto/: mod.rs  parser.rs
src/application/service/: mod.rs
src/application/usecase/: analysis_usecase.rs  exchange_usecase.rs  market_data_usecase.rs  mod.rs  signal_processing_usecase.rs
src/domain/: errors.rs  mod.rs  models.rs
src/domain/model/: mod.rs
src/domain/repository/: mod.rs
src/domain/service/: mod.rs
src/exchange/: binance.rs  client.rs  mod.rs
src/infrastructure/: mod.rs
src/infrastructure/analysis/: mod.rs
src/infrastructure/exchange/: mod.rs
src/infrastructure/market/: mod.rs
src/infrastructure/risk/: mod.rs
src/infrastructure/strategy/: mod.rs
src/market_data/: mod.rs  processor.rs
src/trading/: execution.rs  mod.rs  signals.rs  strategies.rs
