[package]
name = "auto_trade"
version = "0.1.0"
edition = "2021"

[dependencies]
binance_spot_connector_rust = { version = "1.3", features = ["full"] }
tokio = { version = "1", features = ["full"] }
env_logger = "0.11.3"
tower = "0.4.12"
rust_decimal_macros = "1.24.0"
cargo-audit = "0.20.0"
log = "0.4.14"
dotenv = "0.15"
hyper = { version = "0.14.16", features = ["full"] }
hyper-tls = "0.5.0"
futures-util = {version = "0.3.21" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = "1.34"
thiserror = "1.0"