[package]
name = "auto_trade"
version = "0.1.0"
edition = "2021"

[dependencies]
# External exchange API
binance_spot_connector_rust = { version = "1.3", features = ["full"] }

# Async runtime
tokio = { version = "1", features = ["full", "signal"] }

# Logging
env_logger = "0.11.3"
log = "0.4.14"

# HTTP client
tower = "0.4.12"
hyper = { version = "0.14.16", features = ["full"] }
hyper-tls = "0.5.0"
futures-util = {version = "0.3.21" }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# Decimal handling
rust_decimal = "1.34"
rust_decimal_macros = "1.24.0"

# Error handling
thiserror = "1.0"

# Configuration
dotenv = "0.15"

# Technical analysis libraries
rust_ti = "1.4.0"
ta = "0.5.0"

# Clean architecture supporting libraries
async-trait = "0.1.68"

# Security/auditing tools
cargo-audit = "0.20.0"